# dotfiles

./: .XCompose  .Xmodmap  .Xmodmap-thinkpad-6row  .Xresources  .apexrc  .bash_profile  .bash_profile_xdm  .bashrc  .bashrc-env  .bashrc-functions  .cookiecutterrc  .dircolors  .gcalclirc  .gitconfig  .gitignore  .gitignore.mk  .gitmodules  .gtkrc-2.0  .mailcap  .mise  .nvimrc.lua  .signature  .signature-muni  .taskrc  .taskrc-local  .tmux.conf  .vimrc  .xbindkeysrc  .xinitrc  .xmobarrc  .xscreensaver  .xsession  .xsession-wrapper  .xsessionrc  .xsettingsd  LICENSE  Makefile  README.md  _git.mk  _github.mk  (+21 more)
.Xresources.d/: alttab.ad  urxvt.m4  xterm.ad
.arbtt/: .gitignore  Makefile  categorize.cfg  categorize.m4
.bashrc.d/: .fzf-completion.bash  .gitignore  10_env.sh  20_colors.sh  20_history.sh  20_prompt.sh  30_completion_git.sh  31_completion.sh  50_aliases.sh  50_aliases_sudo.sh  50_functions.sh  50_git_dotfiles.sh  50_mc.sh  90_direnv.sh  90_fzf.sh  Makefile
.cabal/: .gitignore  Makefile
.cargo/: .gitignore  config.toml
.config/: compton.conf  fourmolu.yaml  mimeapps.list  ripgreprc  user-dirs.dirs  xsecurelock
.ctags.d/: .gitignore  scala.ctags
.docker/: .gitignore  config.json
.fonts/: .gitignore  Makefile
.ghc/: .gitignore  ghci.conf
.nvim/: bundle  init  init.lua
.rustup/: .gitignore  Makefile  settings.toml
.ssh/: .gitignore  config
.stack/: .gitignore  config.yaml
.stack-prof/: config.yaml  pantry
.terminfo/: Makefile  terminfo.src
src/pango-force-subpixel-positioning/: .clangd  Makefile  meson.build  pango.c  patchelf.sh
(+571 files in other folders)
